Name:                HGamer3D-SamplePackage
Version:             ${HGamer3D_VERSION_MAJOR}.${HGamer3D_VERSION_MINOR}.${HGamer3D_VERSION_PATCH}
Synopsis:            Toolset for the Haskell Game Programmer
Description:         
	HGamer3D is a toolset for developing 3D games in the programming 
	language Haskell. This is the sample package.

License:             OtherLicense
License-file:        LICENSE
Author:              Peter Althainz
Maintainer:          althainz@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.4
Homepage:            http://www.hgamer3d.org
Category:            Game Engine
Extra-source-files:  Setup.hs 
 
Executable engineShutdown
  Build-Depends:     base >= 3 && < 5, HGamer3D, text
  Main-Is:          engineShutdown.hs
  ghc-options:		-threaded

Executable RotatingCube
  Build-Depends:     base >= 3 && < 5, HGamer3D, text
  Main-Is:          RotatingCube.hs
  ghc-options:		-threaded -rtsopts "-with-rtsopts=-N -A15M -qg -G3"

Executable Materials
  Build-Depends:     base >= 3 && < 5, HGamer3D, text
  Main-Is:          Materials.hs
  ghc-options:		-threaded -rtsopts "-with-rtsopts=-N -A15M -qg -G3"

Executable Cuboid2
  Build-Depends:     base >= 3 && < 5, HGamer3D, text
  Main-Is:          Cuboid2.hs
  ghc-options:		-threaded -rtsopts "-with-rtsopts=-N -A15M -qg -G3"

     
